{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 25,
  "lineage": "c8f7ddac-caa2-d559-aea2-e0381dab96e1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "etl_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04aa73b3b11190add",
            "arn": "arn:aws:ec2:eu-west-2:129033205317:instance/i-0fd38ba559b500d0a",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fd38ba559b500d0a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "lmnh-ec2-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ed566249f3fcd8c1",
            "private_dns": "ip-172-31-36-222.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.36.222",
            "public_dns": "ec2-13-41-203-13.eu-west-2.compute.amazonaws.com",
            "public_ip": "13.41.203.13",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b2be0e19f395ffe9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "c23-yusuf-ec2-security-group"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-000ea47cf93520fa8",
            "tags": {
              "Name": "c23-yusuf-lmnh-etl-server"
            },
            "tags_all": {
              "Name": "c23-yusuf-lmnh-etl-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0004c6dc03dd6c48d"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.lmnh_ec2_key",
            "aws_security_group.ec2_sg",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:129033205317:security-group/sg-0004c6dc03dd6c48d",
            "description": "Allow SSH access to EC2 from my IP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0004c6dc03dd6c48d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from my local machine",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "c23-yusuf-ec2-security-group",
            "name_prefix": "",
            "owner_id": "129033205317",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "c23-yusuf-ec2-security-group"
            },
            "tags_all": {
              "Name": "c23-yusuf-ec2-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d616ae237a5268a4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:129033205317:security-group/sg-0bc86a2c7d37b50e4",
            "description": "Allow PostgreSQL access for me",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bc86a2c7d37b50e4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "PostgreSQL access from my local machine",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "c23-yusuf-deployment-security-group",
            "name_prefix": "",
            "owner_id": "129033205317",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "c23-yusuf-deployment-security-group"
            },
            "tags_all": {
              "Name": "c23-yusuf-deployment-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d616ae237a5268a4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    }
  ]
}